--- a/works/inverso_mundus/style.css
+++ b/works/inverso_mundus/style.css
@@ -74,10 +74,10 @@ body {
 
 .darkmode {
   position: fixed;
-  top: 1em;
+  top: 1.25em;
   right: 1em;
-  width: 2em;
-  height: 2em;
+  width: 1.5em;
+  height: 1.5em;
   transition: transform .325s;
 }
 
@@ -170,8 +170,15 @@ body {
     padding: 0 1em;
   }
 
+  .darkmode {
+    top: 1em;
+    width: 1.25em;
+    height: 1.25em;
+  }
+
   .page-title {
-    font-size: .75rem;
+    text-align: left;
+    font-size: calc(2vw + .25rem);
   }
 
   .work__label {
@@ -181,5 +188,6 @@ body {
 
   .work__description {
     flex: 1 0 100%;
+    font-size: 1.125rem;
   }
 }
